Fix spacing in annotation directive
Classes had been added to the stylesheet but not to the template, and
those that were had typos.

--- a/h/static/styles/annotations.scss
+++ b/h/static/styles/annotations.scss
@@ -18,6 +18,7 @@
 
   .annotation-header { margin-bottom: .8em }
   .annotation-section { margin: .8em 0 }
+  .annotation-target { margin: .8em 0 }
   .annotation-footer { margin-top: .8em }
 
   .annotation-user {
